--- a/index.html
+++ b/index.html
@@ -1,33 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <h1>Hi, I'm Your Name</h1>
-    <p>Web Developer | Student</p>
-</header>
+    <!-- Hero Section -->
+    <header class="hero">
+        <h1>Hi, I'm Sonu</h1>
+        <p>Web Developer | Student</p>
+        <button>Contact Me</button>
+    </header>
 
-<section id="about">
-    <h2>About Me</h2>
-    <p>I am a passionate developer...</p>
-</section>
+    <!-- About -->
+    <section class="about">
+        <h2>About Me</h2>
+        <p>
+            I am a passionate developer learning web development and building projects.
+        </p>
+    </section>
 
-<section id="projects">
-    <h2>Projects</h2>
-    <p>Project details here</p>
-</section>
+    <!-- Projects -->
+    <section class="projects">
+        <h2>Projects</h2>
 
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Email: your@email.com</p>
-</section>
+        <div class="project-card">
+            <h3>Portfolio Website</h3>
+            <p>My personal portfolio built using HTML and CSS.</p>
+        </div>
 
-<script src="script.js"></script>
+        <div class="project-card">
+            <h3>Coming Soon</h3>
+            <p>More projects will be added here.</p>
+        </div>
+
+    </section>
+
+    <!-- Contact -->
+    <section class="contact">
+        <h2>Contact</h2>
+        <p>Email: your@email.com</p>
+    </section>
+
+    <script src="script.js"></script>
+
 </body>
+
 </html>
