Added profile image and updated design

--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
     <!-- Hero -->
     <header class="hero">
         <div class="hero-content">
+            <img src="profile.jpg" alt="Profile" class="profile-img">
             <h1>Hi, I'm Sonu</h1>
             <p>Aspiring Web Developer</p>
-            <button>Hire Me</button>
+
+            <div class="buttons">
+                <a href="#" class="btn">Download Resume</a>
+                <a href="#contact" class="btn btn-outline">Contact Me</a>
+            </div>
         </div>
     </header>
 
