Added light and dark mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
     <!-- Navbar -->
     <nav class="navbar">
+    <h2 class="logo">Sonu</h2>
+
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+
+    <!-- Theme Toggle -->
+    <button id="theme-toggle" class="theme-btn">🌙</button>
+</nav>
         <h2 class="logo">Sonu</h2>
         <ul>
             <li><a href="#">Home</a></li>
@@ -80,7 +93,7 @@
         <h2>Contact</h2>
         <p>Email: your@email.com</p>
     </section>
-
+<script src="script.js"></script>
 </body>
 
 </html>
