Updated name and email

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonu | Portfolio</title>
+    <title>Sonu H N| Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-    <h2 class="logo">Sonu</h2>
+    <h2 class="logo">Sonu H N</h2>
 
     <ul>
         <li><a href="#">Home</a></li>
@@ -39,7 +39,7 @@
     <header class="hero">
         <div class="hero-content">
             <img src="profile.jpg" alt="Profile" class="profile-img">
-            <h1>Hi, I'm Sonu</h1>
+            <h1>Hi, I'm Sonu H N</h1>
             <p>Aspiring Web Developer</p>
 
             <div class="buttons">
@@ -91,7 +91,7 @@
     <!-- Contact -->
     <section id="contact" class="section">
         <h2>Contact</h2>
-        <p>Email: your@email.com</p>
+        <p>Email: sonuhn0011@email.com</p>
     </section>
 <script src="script.js"></script>
 </body>
