--- a/index.html
+++ b/index.html
@@ -80,7 +80,16 @@
                 <h3>Portfolio Website</h3>
                 <p>My personal portfolio built using HTML & CSS.</p>
             </div>
+             <div class="project-card">
+    <h3>Calculator App</h3>
+    <p>A simple calculator built using HTML, CSS, and JavaScript.</p>
 
+    <a href="https://github.com/Sonu-H-N/calculator-app"
+       target="_blank"
+       class="btn">
+       View Project
+    </a>
+</div>
             <div class="project-card">
                 <h3>Coming Soon</h3>
                 <p>More projects will be added soon.</p>
