--- a/index.html
+++ b/index.html
@@ -4,31 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonu H N| Portfolio</title>
+    <title>Sonu H N Portfolio</title>
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <!-- Theme Button -->
+    <button id="theme-toggle" class="theme-btn">🌙</button>
+
     <!-- Navbar -->
     <nav class="navbar">
-    <h2 class="logo">Sonu H N</h2>
+        <h2 class="logo">Sonu H N</h2>
 
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-
-    <!-- Theme Toggle -->
-    <button id="theme-toggle" class="theme-btn">🌙</button>
-</nav>
-        <h2 class="logo">Sonu</h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -36,38 +27,28 @@
     </nav>
 
     <!-- Hero -->
-    <header class="hero">
-        <div class="hero-content">
-            <img src="profile.jpg" alt="Profile" class="profile-img">
-            <h1>Hi, I'm Sonu H N</h1>
-            <p>Aspiring Web Developer</p>
+    <section id="home" class="hero">
+        <img src="profile.jpg" alt="Profile" class="profile-img">
 
-            <div class="buttons">
-                <a href="#" class="btn">Download Resume</a>
-                <a href="#contact" class="btn btn-outline">Contact Me</a>
-            </div>
+        <h1>Hi, I'm Sonu H N</h1>
+        <p>Aspiring Web Developer</p>
+
+        <div class="buttons">
+            <a href="#" class="btn">Download Resume</a>
+            <a href="#contact" class="btn">Contact Me</a>
         </div>
-    </header>
-
-    <!-- About -->
-    <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>
-            I am a passionate web developer learning modern technologies and building projects.
-            I enjoy solving problems and creating beautiful websites.
-        </p>
     </section>
 
     <!-- Skills -->
     <section id="skills" class="section">
         <h2>Skills</h2>
 
-        <div class="skills-container">
-            <div class="skill">HTML</div>
-            <div class="skill">CSS</div>
-            <div class="skill">JavaScript</div>
-            <div class="skill">Git</div>
-            <div class="skill">GitHub</div>
+        <div class="skills">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+            <span>Git</span>
+            <span>GitHub</span>
         </div>
     </section>
 
@@ -76,33 +57,39 @@
         <h2>Projects</h2>
 
         <div class="projects-container">
+
             <div class="project-card">
                 <h3>Portfolio Website</h3>
                 <p>My personal portfolio built using HTML & CSS.</p>
             </div>
-             <div class="project-card">
-    <h3>Calculator App</h3>
-    <p>A simple calculator built using HTML, CSS, and JavaScript.</p>
 
-    <a href="https://github.com/Sonu-H-N/calculator-app"
-       target="_blank"
-       class="btn">
-       View Project
-    </a>
-</div>
+            <div class="project-card">
+                <h3>Calculator App</h3>
+                <p>A simple calculator built using HTML, CSS, and JavaScript.</p>
+
+                <a href="https://github.com/Sonu-H-N/calculator-app"
+                   target="_blank"
+                   class="btn">
+                   View Project
+                </a>
+            </div>
+
             <div class="project-card">
                 <h3>Coming Soon</h3>
                 <p>More projects will be added soon.</p>
             </div>
+
         </div>
     </section>
 
     <!-- Contact -->
     <section id="contact" class="section">
         <h2>Contact</h2>
-        <p>Email: sonuhn0011@email.com</p>
+        <p>Email: your@email.com</p>
     </section>
-<script src="script.js"></script>
+
+    <script src="script.js"></script>
+
 </body>
 
 </html>
